Fix email formatting on pre blocks
Only some blocks were wrapped. All 'pre' blocks with email addresses
need to break on words and wrap.

--- a/ws/static/css/layout.css
+++ b/ws/static/css/layout.css
@@ -63,8 +63,9 @@ leader-select .ui-select-container {
 
 
 /* Wrap participant emails for easy copying */
-pre.participant-emails {
+pre.wrapped-emails {
   white-space: pre-line;
+  word-break: break-word;
 }
 
 /* Styles lifted from Djangular for rendering errors nicely */
